--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,7 +2,7 @@
   <div class="box row">
     <div class="email-password-area  col-xs-12" ng-class="[hasProviders ? 'small col-sm-8' : 'large col-sm-12']">
       <div class="header">
-        <span>Log In</span>
+        <span>TEST Log In</span>
         <span ng-show="canRegister" wd-can-register>
           <span> or </span>
           <a href="#register">Create an Account</a>
