adding styles for header and footer

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -38,6 +38,13 @@
 @baseFontSize: 14px;
 @boxGutter: 30px;
 
+//branding color
+@skadden-red: #ED3124;
+@skadden-gray: #D9D9D9;
+@skadden-border: #979797;
+@skadden-black: #333333;
+
+
 html,body
 {
   height: 100%;
@@ -396,3 +403,7 @@ p{
 .alert{
   word-wrap: break-word;
 }
+
+
+@import url(branding/header.less);
+@import url(branding/footer.less);
