--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,6 +7,9 @@
       <div class="alert alert-danger bad-login" ng-show="errors.badLogin">
         Invalid username or password.
       </div>
+      <div class="alert alert-danger not-found" ng-show="errors.notFound">
+
+      </div>
       <div class="alert alert-danger" ng-show="errors.unknown">An unkown error has occurred</div>
       <div class="alert alert-danger" ng-show="errors.emailPasswordRequired">Please enter your email and password.</div>
       <div class="alert alert-danger" ng-show="errors.userMessage">
