--- a/app/styles/branding/footer.less
+++ b/app/styles/branding/footer.less
@@ -1,13 +1,16 @@
 .custom-footer {
     background-color: @skadden-black;
-    color: white;
-    padding-top: 50px 0;
+    
+    padding: 50px 0;
+    margin-top: 10%;
 }
 
 .custom-footer-disclaimer {
+    color: white;
     max-width: 960px;
     margin: 0 auto;
-    padding-top: 20px;
-    font-size: 18px;
-    font-weight: 800px;
+    padding-top: 22px;
+    font-size: 16px;
+    font-weight: 600;
+    border-top: 1px solid #979797;
 }
