--- a/app/styles/branding/footer.less
+++ b/app/styles/branding/footer.less
@@ -3,6 +3,18 @@
     
     padding: 50px 0;
     margin-top: 10%;
+
+    &[ng-cloak] {
+        display: none;
+    }
+
+    @media (max-width: @screen-xs-max){
+
+        padding-left:  8px;
+        padding-right:  8px;
+        margin-left: -8px;
+        margin-right: -8px;
+    }
 }
 
 .custom-footer-disclaimer {
@@ -14,3 +26,5 @@
     font-weight: 600;
     border-top: 1px solid #979797;
 }
+
+    
