--- a/app/styles/branding/header.less
+++ b/app/styles/branding/header.less
@@ -1,3 +1,9 @@
+.custom-header {
+	&[ng-cloak] {
+		display: none;
+	}
+}
+
 .custom-header-identity {
 	background-color: @skadden-gray;
 	border-bottom: 1px solid @skadden-border;
